objects/et4ae5__IndividualEmailResult__c.object
<CustomObject>
    <fields>
        <fullName>et4ae5__Clicked__c</fullName>
        <formula>et4ae5__NumberOfUniqueClicks__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Contact_ID__c</fullName>
        <formula>et4ae5__Contact__r.Id</formula>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>IndividualEmailResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateBounced__c</fullName>
        <inlineHelpText>La fecha y la hora en que se realizó la devolución desde la dirección de correo electrónico de este suscriptor</inlineHelpText>
        <label>Date Bounced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateOpened__c</fullName>
        <inlineHelpText>La fecha y la hora en que el suscriptor abrió el correo electrónico</inlineHelpText>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateSent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateUnsubscribed__c</fullName>
        <inlineHelpText>La fecha y la hora en que el suscriptor canceló su suscripción</inlineHelpText>
        <label>Date Unsubscribed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Email_Asset_ID__c</fullName>
        <label>Email Asset ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Email_ID__c</fullName>
        <label>Email ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Email__c</fullName>
        <formula>IF( !ISBLANK(et4ae5__Contact__r.Email), et4ae5__Contact__r.Email, et4ae5__Lead__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromAddress__c</fullName>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromName__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HardBounce__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>El correo electrónico enviado a este suscriptor se rechazó debido a anomalías de carácter permanente (esto sucede normalmente cuando se produce un error de tipo &quot;usuario desconocido&quot; o &quot;dominio no encontrado&quot;).</inlineHelpText>
        <label>Hard Bounce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Lead_ID__c</fullName>
        <formula>et4ae5__Lead__r.Id</formula>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>IndividualEmailResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__MergeId__c</fullName>
        <externalId>true</externalId>
        <label>Merge Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>et4ae5__NumberOfTotalClicks__c</fullName>
        <inlineHelpText>El número total de veces que este suscriptor hizo clic en los vínculos de este correo electrónico</inlineHelpText>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberOfUniqueClicks__c</fullName>
        <inlineHelpText>El número de clics únicos de este suscriptor de los vínculos de este correo electrónico (único significa un clic por vínculo)</inlineHelpText>
        <label>Number of Unique Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indica si el suscriptor abrió o no el correo electrónico</inlineHelpText>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__SendDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>El identificador único del envío de correo electrónico. Es posible que se le solicite este número cuando llave al servicio de asistencia de Marketing Cloud si se presenta la necesidad.</inlineHelpText>
        <label>Send Definition</label>
        <referenceTo>et4ae5__SendDefinition__c</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>IndividualEmailResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__SoftBounce__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>El correo electrónico enviado se rechazó debido a una anomalía aparentemente temporal, por ejemplo, porque el buzón de entrada está lleno, después de que el sistema haya reintentado enviar el correo electrónico sin éxito cada 15 minutos durante 72 horas.</inlineHelpText>
        <label>Soft Bounce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__SubjectLine__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Tracking_As_Of__c</fullName>
        <defaultValue>now()</defaultValue>
        <inlineHelpText>La fecha y la hora de recepción de la última actualización de seguimiento por parte de Salesforce</inlineHelpText>
        <label>Tracking As Of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__TriggeredSendDefinitionName__c</fullName>
        <formula>et4ae5__TriggeredSendDefinition__r.Name</formula>
        <inlineHelpText>Si este correo electrónico se generó automáticamente por un Envío desencadenado, el nombre del Envío desencadenado que generó el correo electrónico se mostrará aquí.</inlineHelpText>
        <label>Triggered Send Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__TriggeredSendDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggered Send</label>
        <referenceTo>et4ae5__Automated_Send__c</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>Individual_Email_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Individual Email Result</label>
    <listViews>
        <fullName>et4ae5__All</fullName>
        <columns>NAME</columns>
        <columns>et4ae5__FromName__c</columns>
        <columns>et4ae5__DateSent__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>et4ae5__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Email Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>et4ae5__Prevent_Email_and_Triggered_Send_link</fullName>
        <active>true</active>
        <description>An IER by definition can never be linked to both an Email Send and a Triggered Send. An OR relationship must be observed. Furthermore, an IER cannot have both Email Send and Triggered Send be blank.</description>
        <errorConditionFormula>(NOT(ISBLANK(et4ae5__SendDefinition__c)) &amp;&amp; NOT(ISBLANK(et4ae5__TriggeredSendDefinition__c))) || (ISBLANK(et4ae5__SendDefinition__c) &amp;&amp; ISBLANK(et4ae5__TriggeredSendDefinition__c))</errorConditionFormula>
        <errorMessage>An Email Send or Triggered Send Definition (but not both) must be assigned to an Individual Email Result.</errorMessage>
    </validationRules>
</CustomObject>